--- a/client-myjss/src/index.html
+++ b/client-myjss/src/index.html
@@ -6,7 +6,8 @@
 
   <!-- Meta Tags -->
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="viewport"
+    content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, viewport-fit=cover">
   <meta name="author" content="JSS">
   <meta name="description" content="JSS - Journal Spécial des Sociétés">
   <base href="/">
@@ -25,7 +26,7 @@
 
 </head>
 
-<body>
+<body class="bg-secondary">
   <app-root></app-root>
 </body>
 
