implements authentication for MyJSS

--- a/client-myjss/src/index.html
+++ b/client-myjss/src/index.html
@@ -26,8 +26,8 @@
 
 </head>
 
-<body class="bg-secondary">
-  <app-root></app-root>
+<body>
+  <app-root style="display: flex;flex-direction: column;flex-grow: 1;"></app-root>
 </body>
 
 </html>
