Adding correct implementation of footnotes

--- a/client-jss/src/index.html
+++ b/client-jss/src/index.html
@@ -69,6 +69,13 @@
       }
     })
 
+    const scrollToElement = function (id) {
+      const element = document.getElementById(id);
+      if (element) {
+        element.scrollIntoView({ behavior: 'smooth' });
+      }
+    }
+
   </script>
 
   <!-- Favicon -->
