--- a/client-myjss/src/index.html
+++ b/client-myjss/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr" data-bs-theme="light">
+<html lang="fr" data-bs-theme="light" dir="ltr">
 
 <head>
   <title>MyJSS</title>
