--- a/client-jss/src/index.html
+++ b/client-jss/src/index.html
@@ -15,6 +15,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@700&family=Open+Sans&display=swap" rel="stylesheet">
 
+  <!-- Font icons -->
+  <link rel="stylesheet" href="assets/icons/around-icons.min.css">
 </head>
 
 <body>
