--- a/client-jss/src/index.html
+++ b/client-jss/src/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, viewport-fit=cover">
   <meta name="author" content="JSS">
   <meta name="description" content="JSS - Journal Spécial des Sociétés">
-  <meta name="robots" content="noindex">
+  <meta name="robots" content="index, follow">
   <base href="/">
   <!-- Title -->
   <title>JSS - Journal Spécial des Sociétés</title>
