--- a/client-myjss/src/index.html
+++ b/client-myjss/src/index.html
@@ -10,7 +10,7 @@
     content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, viewport-fit=cover">
   <meta name="author" content="JSS">
   <meta name="description" content="JSS - Journal Spécial des Sociétés">
-  <meta name="robots" content="noindex">
+  <meta name="robots" content="index, follow">
   <base href="/">
 
   <!-- Favicon -->
