--- a/client-jss/src/index.html
+++ b/client-jss/src/index.html
@@ -11,7 +11,7 @@
   <!-- Title -->
   <title>JSS - Journal Spécial des Sociétés</title>
   <!-- Favicon -->
-  <link rel="icon" href="assets/images/favicon-32x32.png">
+  <link rel="shortcut icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@700&family=Open+Sans&display=swap" rel="stylesheet">
 
