--- a/client-myjss/src/index.html
+++ b/client-myjss/src/index.html
@@ -14,7 +14,7 @@
   <base href="/">
 
   <!-- Favicon -->
-  <link rel="shortcut icon" href="assets/images/favicon.ico">
+  <link rel="shortcut icon" href="favicon.ico">
 
   <!-- Google Font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
